deploy/gitops/apps/openstack-runtime/base/ocr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocr-service
  namespace: uit-healthcare
spec:
  type: NodePort
  ports:
    - port: 8001
      targetPort: 8001
      nodePort: 30082
  selector:
    app: ocr-service
